--- a/pom.xml
+++ b/pom.xml
@@ -5,5 +5,15 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>22.0.0</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
 </project>
