--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,27 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+      <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
       <dependency>
           <groupId>org.jetbrains</groupId>
           <artifactId>annotations</artifactId>
-          <version>22.0.0</version>
-          <scope>compile</scope>
+          <version>23.0.0</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+      <dependency>
+          <groupId>org.junit.jupiter</groupId>
+          <artifactId>junit-jupiter-api</artifactId>
+          <version>5.8.2</version>
+          <scope>test</scope>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>1.3</version>
+          <scope>test</scope>
       </dependency>
   </dependencies>
     <properties>
