--- a/pom.xml
+++ b/pom.xml
@@ -30,15 +30,6 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-<!--
-        &lt;!&ndash;Dependência que permite utilizar propriedades importantes do JUnit 4 que foram removidas do JUnit 5&ndash;&gt;
-        &lt;!&ndash; https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-migrationsupport &ndash;&gt;
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-migrationsupport</artifactId>
-            <version>5.8.2</version>
-            <scope>test</scope>
-        </dependency>-->
 
         <!--Alternativa às rules-->
         <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
@@ -46,6 +37,15 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.22.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--Permite inserir parâmetrosnas anotações @Test-->
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
