--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,15 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+
+        <!--Permite criar 'mock-up' de objetos-->
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>4.4.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
